--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <div class="social_icon_main">
                      <div class="social_icon">
                         <ul>
-                           <li><a href="Ejercicios.pdf"><img width="100px" src="folder.png" title="Ejercicios"></a></li> <br>
+                           <li><a href="Ejercicios.pdf"> Ejercicios de: <img width="100px" src="folder.png" title="Ejercicios"></a></li> <br>
                            <li><a href="FinalM1-M3.pdf"><img width="100px" src="folder.png"></a></li><br>
                            <li><a href="FinalM4-M6.pdf"><img width="100px" src="folder.png"></a></li><br>
                         </ul>
