--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
                      </div>
                      
                   </div>
+                  
+                  <p class="lorem_text"><br> <a href="https://susanagrl.github.io/mob/">Proyecto web Msic</a></p>
                </div>
                <div class="col-lg-4 col-sm-12">
                   <div class="image_5"><img src="cifovioleta.jpg"></div>
