--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                      
                   </div>
                   
-                  <p class="lorem_text"><br> <a href="https://susanagrl.github.io/Msic/">Proyecto web Msic</a></p>
+                 <h2><br><br> <a href="https://susanagrl.github.io/Msic/">Proyecto web Msic</a></h2>
                </div>
                <div class="col-lg-4 col-sm-12">
                   <div class="image_5"><img src="cifovioleta.jpg"></div>
